--- a/res/layout/fragment_student_check_tab.xml
+++ b/res/layout/fragment_student_check_tab.xml
@@ -18,12 +18,15 @@
 		xmlns:android="http://schemas.android.com/apk/res/android"
 		android:orientation="vertical"
 		android:layout_width="fill_parent"
-		android:layout_height="fill_parent">
+		android:layout_height="fill_parent"
+		>
 
 	<com.viewpagerindicator.TabPageIndicator
 			android:id="@+id/indicator"
 			android:layout_height="wrap_content"
 			android:layout_width="fill_parent"
+			android:layout_gravity="center"
+
 			/>
 	<android.support.v4.view.ViewPager
 			android:id="@+id/pager"
