--- a/res/layout/fragment_student_check_uncheck.xml
+++ b/res/layout/fragment_student_check_uncheck.xml
@@ -19,6 +19,10 @@
 		android:orientation="vertical"
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent">
-<TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center" android:text="nihao "/>
 
+	<ListView android:id="@id/android:list"
+			  android:layout_width="match_parent"
+			  android:layout_height="match_parent"
+			  android:layout_weight="1"
+			  android:drawSelectorOnTop="false"/>
 </LinearLayout>
