--- a/res/layout/fragment_student_check_uncheck.xml
+++ b/res/layout/fragment_student_check_uncheck.xml
@@ -19,10 +19,10 @@
 		android:orientation="vertical"
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent">
-
-	<ListView android:id="@id/android:list"
-			  android:layout_width="match_parent"
-			  android:layout_height="match_parent"
-			  android:layout_weight="1"
-			  android:drawSelectorOnTop="false"/>
+    <com.handmark.pulltorefresh.library.PullToRefreshListView
+        xmlns:ptr="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/pull_to_refresh_listview"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        />
 </LinearLayout>
