--- a/res/layout/fragment_student_check_historycheck.xml
+++ b/res/layout/fragment_student_check_historycheck.xml
@@ -58,6 +58,7 @@
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="10dip"
                        android:text="@string/history_end_date"/>
+
                    <EditText android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
@@ -75,15 +76,15 @@
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="10dip"
                        android:text="@string/approve_state_label"/>
-                   <EditText android:layout_weight="1"
+                   <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
-                       android:background="@null"
-                       android:singleLine="true"
-                       android:text="2015-01-01 00:00:00"
                        android:id="@+id/approvedStateSE"
-                       />
+                       android:entries="@+array/approvedStates"
+                       >
+
+                   </Spinner>
                </TableRow>
            </TableLayout>
            <Button
