--- a/res/layout/fragment_student_check_historycheck_item.xml
+++ b/res/layout/fragment_student_check_historycheck_item.xml
@@ -13,23 +13,24 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-
 <LinearLayout
-		xmlns:android="http://schemas.android.com/apk/res/android"
-		android:orientation="horizontal"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		>
-	<LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent" android:orientation="vertical" android:layout_weight="1">
-		<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:gravity="center_vertical">
-			<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="日期:" android:textSize="20sp" android:textStyle="bold"/>
-			<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"  android:id="@+id/leaveDateTV"/>
-		</LinearLayout>
-		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"  android:id="@+id/approvedTV" />
-	</LinearLayout>
-	<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:gravity="center" >
-		<ImageView android:layout_width="40dp" android:layout_height="50dp" android:src="@drawable/home_more_clean" android:id="@+id/deleteBT"/>
-		<ImageView android:layout_width="40dp" android:layout_height="50dp" android:src="@drawable/home_more_feedback" android:layout_marginLeft="10dp" android:id="@+id/editBt"/>
-	</LinearLayout>
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    >
+    <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent" android:orientation="vertical" android:layout_weight="1">
+        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center_vertical">
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="日期:" android:textSize="20sp" android:textStyle="bold"/>
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"  android:layout_marginLeft="2dp" android:id="@+id/leaveDateTV"/>
+        </LinearLayout>
+        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center_vertical">
+            <TextView android:layout_width="25dp" android:layout_height="25dp" android:layout_marginLeft="5dp"  android:layout_marginBottom="2dp" android:gravity="center" android:background="@drawable/shape_circle" android:id="@+id/leaveTypeTV" android:text="课" android:textStyle="bold" android:layout_marginTop="1dp"/>
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp"  android:layout_marginBottom="2dp" android:gravity="center"  android:id="@+id/rightContentTV" android:text="计算机" />
+        </LinearLayout>
+    </LinearLayout>
+    <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginRight="10dp" android:gravity="center" >
+        <TextView android:layout_width="45dp" android:layout_height="45dp" android:id="@+id/approvedTV" android:gravity="center"  android:background="@drawable/shape_round_corner" android:text="状态"/>
+    </LinearLayout>
 
 </LinearLayout>
