--- a/res/layout/fragment_student_check_newcheck_item.xml
+++ b/res/layout/fragment_student_check_newcheck_item.xml
@@ -26,7 +26,7 @@
 			<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"  android:layout_marginLeft="2dp" android:id="@+id/leaveDateTV"/>
 		</LinearLayout>
         <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center_vertical">
-            <TextView android:layout_width="25dp" android:layout_height="25dp" android:layout_marginLeft="5dp"  android:layout_marginBottom="2dp" android:gravity="center" android:background="@drawable/shape_circle" android:id="@+id/leaveTypeTV" android:text="课" android:textStyle="bold" android:layout_marginTop="1dp"/>
+            <TextView android:layout_width="25dp" android:layout_height="25dp" android:layout_marginLeft="5dp"  android:layout_marginBottom="2dp" android:gravity="center" android:background="@drawable/shape_grey_circle" android:id="@+id/leaveTypeTV" android:text="课" android:textStyle="bold" android:layout_marginTop="1dp"/>
             <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp"  android:layout_marginBottom="2dp" android:gravity="center"  android:id="@+id/rightContentTV" android:text="计算机" />
         </LinearLayout>
 	</LinearLayout>
