--- a/res/layout/fragment_student_sick_item.xml
+++ b/res/layout/fragment_student_sick_item.xml
@@ -25,12 +25,12 @@
             <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"  android:layout_marginLeft="2dp" android:id="@+id/leaveDateTV"/>
         </LinearLayout>
         <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center_vertical">
-            <TextView android:layout_width="25dp" android:layout_height="25dp" android:layout_marginLeft="5dp"  android:layout_marginBottom="2dp" android:gravity="center" android:background="@drawable/shape_circle" android:id="@+id/leaveTypeTV" android:text="课" android:textStyle="bold" android:layout_marginTop="1dp"/>
+            <TextView android:layout_width="25dp" android:layout_height="25dp" android:layout_marginLeft="5dp"  android:layout_marginBottom="2dp" android:gravity="center" android:background="@drawable/shape_grey_circle" android:id="@+id/leaveTypeTV" android:text="课" android:textStyle="bold" android:layout_marginTop="1dp"/>
             <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp"  android:layout_marginBottom="2dp" android:gravity="center"  android:id="@+id/rightContentTV" android:text="计算机" />
         </LinearLayout>
     </LinearLayout>
     <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginRight="10dp" android:gravity="center" >
-        <TextView android:layout_width="45dp" android:layout_height="45dp" android:id="@+id/approvedTV" android:gravity="center"  android:background="@drawable/shape_round_corner" android:text="状态"/>
+        <TextView android:layout_width="45dp" android:layout_height="45dp" android:id="@+id/approvedTV" android:gravity="center" android:background="@drawable/shape_orange_circle" android:text="销假"/>
     </LinearLayout>
 
 </LinearLayout>
