--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -16,6 +16,7 @@
 	<android.support.v4.app.FragmentTabHost
 			android:id="@android:id/tabhost"
 			android:layout_width="match_parent"
+            android:background="#ffc0c0c0"
 			android:layout_height="wrap_content">
 		<TabWidget
 				android:id="@android:id/tabs"
